--- a/test/fixtures/batches.yml
+++ b/test/fixtures/batches.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  reference: MyString
-  purchase_channel: MyString
+  reference: REF1
+  purchase_channel: CHAN
 
 two:
-  reference: MyString
-  purchase_channel: MyString
+  reference: REF2
+  purchase_channel: NOPE
