--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,19 +1,19 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  reference: MyString
-  purchase_channel: MyString
-  client_name: MyString
+  reference: UNIQUEREF1
+  purchase_channel: CHAN
+  client_name: NAME1
   address: MyString
   delivery_service: MyString
-  total_value_cents: 1
+  total_value: MyString
   status: 
 
 two:
-  reference: MyString
-  purchase_channel: MyString
-  client_name: MyString
+  reference: UNIQUEREF2
+  purchase_channel: CHAN
+  client_name: NAME2
   address: MyString
   delivery_service: MyString
-  total_value_cents: 1
+  total_value: MyString
   status: 
